# informatyka

./: README.md
klasa-2/inne/: zad1.cpp  zad2.cpp  zad3.cpp
klasa-2/program-z-5-ficzerami/: calculator.cc  initials.cc  initials.h  main.cc  random.cc  random.h  rectangle.cc  repeat.cc  repeat.h
klasa-2/randomizajcja/: zad1.cc
klasa-3/algorytmy/: palindrom.cc
klasa-3/kryptografia/: szyfrowanie_kolumnowe.cc  szyfrowanie_kolumnowe_z_dowolna_dlugoscia.cc
klasa-3/kryptografia-cpp/: Kryptografia.sln  przeczytaj.txt.txt
klasa-3/kryptografia-cpp/Kryptografia/: Asymetric.cpp  Asymetric.h  Hash.cpp  Kryptografia.vcxproj  Main.cpp  Symetric.cpp
klasa-3/kryptografia-prezentacja-cpp/Kryptografia/: Hash.h  Kryptografia.vcxproj.filters  Symetric.h
klasa-3/macierze/: kartkowka1.cc  kartkowka2.cc  macierz.cc  macierz2.cc  macierz3.cc  macierz4.cc
klasa-3/powtorzenie-z-2/: kartkowka.cc  zad1.cc  zad2.cc
klasa-3/quiz/: CMakeLists.txt  instalacja.txt  main.cpp  quiz.json  quiz_item.h  quiz_manager.cpp  quiz_manager.h  reader.cpp  reader.h
klasa-3/tai/zadania-z-obiektami-dom/zad1/: README.md  index.html  script.js
klasa-3/tai/zadania-z-obiektami-dom/zad2/: index.html  script.js
klasa-3/tai/zadania-z-obiektami-dom/zad3/: index.html  script.js
klasa-3/tai/zadania-z-obiektami-dom/zad4/: index.html  script.js
klasa-3/tai/zadania-z-obiektami-dom/zad5/: index.html  script.js
klasa-3/wielomiany/: zadanie1.cc
klasa-4/matury/2021/: zad4.cpp
klasa-4/matury/2022/: zad4.cpp
klasa-4/matury/2022/czerwiec/: zad4.cpp
